--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -15,7 +15,7 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 〜Nimのメモリ管理を理解するシリーズ〜
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
 - [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
-- [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25.md)
+- [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25)
 
 ---
 
@@ -41,7 +41,7 @@ type
 ORCの設計の革新的な点は、周期的ルート候補を定数時間O(1)で登録・解除できることです。その結果、実行時にNimのデータがほとんど周期的でないという事実を利用することができます。
 
 ## ARC
-ARCはNimの純粋な参照カウントGCですが、多くの参照カウント操作が最適化されています。ムーブセマンティクスのおかげで、データ構造の構築には参照カウントの操作が不要です。またNimのARC実装のもう一つの特徴である「カーソル推論」のおかげで、一般的なデータ構造の[トラバーサル](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)もRC操作に関係しないのです。ARCとORCの性能は、ヒープサイズに依存しません。
+ARCはNimの純粋な参照カウントGCですが、多くの参照カウント操作が最適化されています。ムーブセマンティクスのおかげで、データ構造の構築には参照カウントの操作が不要です。またNimのARC実装のもう一つの特徴である「カーソル推論」のおかげで、一般的なデータ構造の[トラバーサル](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)も参照カウント操作に関係しないのです。ARCとORCの性能は、ヒープサイズに依存しません。
 
 ## ベンチマーク
 このアルゴリズムの違いを示す簡単なベンチマークを作成しました。このベンチマークは、ORCとNimの他のGCの違いを強調するために書かれたもので、現実的なワークロードをモデル化するものではないことに注意してください。
@@ -56,7 +56,7 @@ for i in 0 ..< 10:
 
 var served = 0
 
-var server = newAsyncHttpServer()
+var server = newAsyncHttpServer() # 10行目
 proc cb(req: Request) {.async.} =
   inc served
   await req.respond(Http200, "Hello World")
@@ -64,7 +64,7 @@ proc cb(req: Request) {.async.} =
     when not defined(memForSpeed):
       GC_fullCollect()
 
-waitFor server.serve(Port(8080), cb)
+waitFor server.serve(Port(8080), cb) # 18行目
 ```
 
 10行目から18行目は、Nim標準ライブラリを使った"Hello World”を返す非同期HTTPサーバーの例です。
