公開 Nimのメモリ管理を理解する④

--- a/articles/af2b2b9f8fd890.md
+++ b/articles/af2b2b9f8fd890.md
@@ -18,6 +18,7 @@ https://www.youtube.com/watch?v=yA32Wxl59wo
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
 - [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
 - [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25)
+- [Nimのメモリ管理を理解する④ ― ORC - アルゴリズムによるアドバンテージ](https://zenn.dev/dumblepy/articles/efffa86d9177b1)
 
 ---
 
