--- a/articles/d935a9205edf55.md
+++ b/articles/d935a9205edf55.md
@@ -2,7 +2,7 @@
 title: "NimでJavaScriptターゲットの開発をする方法"
 emoji: "👑"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["nim", "javascript"]
+topics: ["nim", "javascript", "フロントエンド"]
 published: false
 ---
 
