--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -2,8 +2,8 @@
 title: "Nimのメモリ管理を理解する④ ― ORC - アルゴリズムによるアドバンテージ"
 emoji: "👑"
 type: "idea" # tech: 技術記事 / idea: アイデア
-topics: ["nim"]
-published: false
+topics: ["nim", "GC", "メモリ管理"]
+published: true
 ---
 
 Nimのメモリ管理を理解するシリーズ、3作目はORCについてのこちらの記事を翻訳します。
@@ -16,6 +16,7 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
 - [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
 - [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25)
+- [Nimのメモリ管理を理解する④ ― ORC - アルゴリズムによるアドバンテージ](https://zenn.dev/dumblepy/articles/efffa86d9177b1)
 
 ---
 
@@ -28,7 +29,7 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 > https://www.slideshare.net/y-uti/php-gc
 
 
-いつものように、私はこのアルゴリズムを改良し、より多くの最適化を加えたいという誘惑に抗えませんでした。Nimコンパイラは関係する型を分析し、潜在的に循環参照になっている場合のみ、サイクルコレクタを呼び出すコードを生成します。この型解析は、型に`asyclic` と注釈をつけることで助けられています。例えば、2分木は次のようにモデル化されます。
+いつものように、私はこのアルゴリズムを改良し、より多くの最適化を加えたいという誘惑に抗えませんでした。Nimコンパイラは関係する型を分析し、潜在的に循環参照になっている場合のみ、サイクルコレクタを呼び出すコードを生成します。この型解析は、型に`asyclic` と注釈をつけることで助けられています。例えば、二分木は次のようにモデル化されます。
 
 ```nim
 type
@@ -36,9 +37,9 @@ type
     kids: array[2, Node]
     data: string
 ```
-残念ながら、サイクルコレクタのオーバーヘッドは実際に測定可能です。ORCの性能をARCに近づけるためには、このアノテーションが欠かせません。
+サイクルコレクタのオーバーヘッドは実際に測定可能です。ORCの性能をARCに近づけるためには、このアノテーションが欠かせません。
 
-ORCの設計の革新的な点は、周期的ルート候補を定数時間O(1)で登録・解除できることです。その結果、実行時にNimのデータがほとんど周期的でないという事実を利用することができます。
+ORCの設計の革新的な点は、周期的ルート候補を定数時間`O(1)`で登録・解除できることです。その結果、実行時にNimのデータがほとんど周期的でないという事実を利用することができます。
 
 ## ARC
 ARCはNimの純粋な参照カウントGCですが、多くの参照カウント操作が最適化されています。ムーブセマンティクスのおかげで、データ構造の構築には参照カウントの操作が不要です。またNimのARC実装のもう一つの特徴である「カーソル推論」のおかげで、一般的なデータ構造の[トラバーサル](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)も参照カウント操作に関係しないのです。ARCとORCの性能は、ヒープサイズに依存しません。
@@ -95,8 +96,8 @@ GCの研究では見落とされていたアイデアがたくさんあること
 ORCを使ってコンパイルするには、コマンドラインで`--gc:orc` を使用します。
 
 - ORCは、[Valgrind](https://ja.wikipedia.org/wiki/Valgrind)や他のC++サニタイザーと連携して動作できます。(Valgrindを正確にチェックするために `--gc:orc -g -d:useMalloc` でコンパイルしてください。)
-- ORCはこれまでのGCに比べて2倍少ないメモリしか使いません。
+- ORCはこれまでのGCに比べて約半分のメモリしか使いません。
 - メモリ消費量が重要な場合、ORCはスループットにおいて桁違いに速くなる可能性があります。メモリ消費量がそれほど重要でない場合は、スループットは同等です。
 - ORCは、CPU固有のトリックを使用せず、Webassemblyのような限定されたターゲットでもハックなしで動作します。
-- ORCはサブミリ秒のレイテンシを提供します。これは、（ハード）リアルタイム・システムに適しています。"Stop the World"は起きません。
+- ORCはサブミリ秒のレイテンシを提供します。これは、（ハード）リアルタイム・システムに適しています。GCによる"Stop the World"は起きません。
 - ORCは、ヒープやスタックスペースの使用量を気にしません。
