公開 NimでJavaScriptターゲットの開発をする方法

--- a/articles/d935a9205edf55.md
+++ b/articles/d935a9205edf55.md
@@ -3,7 +3,7 @@ title: "NimでJavaScriptターゲットの開発をする方法"
 emoji: "👑"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["nim", "javascript", "フロントエンド"]
-published: false
+published: true
 ---
 
 NimではC言語にトランスパイルして実行可能バイナリを作る以外にもJavaScriptを出力することもできます。
