--- a/articles/1b79a67341e477.md
+++ b/articles/1b79a67341e477.md
@@ -2,11 +2,89 @@
 title: "ICPのETHインテグレーションの仕組みと未来"
 emoji: "♾"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["blockchain", "ethereum", "icp"]
 published: false
 ---
 
 インターネットコンピューターICPは分散型インターネットを目指したプロジェクトで、AWSやGCPのようなPaaSの分散化と、世界中に存在するサーバー群の分散性を確保するためにビットコインのような「トークンに基づくインセンティブ設計」を使った、ブロックチェーン基盤の一つです。
 ICP自体もブロックチェーンのL1として、[トランザクションが早い、ガス代が安い、ストレージコストが安い](https://wiki.internetcomputer.org/wiki/L1_comparison)、NFTのトランスファーにガス代がかからない、[ユーザーはガス代を支払わない(リバースガスモデル)](https://nryblog.work/reverse-gas/)などの利点がありますが、それだけでは中々人々に使ってもらい普及するのは難しいです。
 開発を主導しているDfinityのロードマップでは、ビットコインとイーサリアムのトークンをICP上で扱えるようにするという、それぞれ**ビットコインインテグレーション**と**イーサリアムインテグレーション**という計画があります。
-今回はそれがどういう仕組みで実現されているのか、またそれによってどういう未来が作れるようになるうのか解説していきます。
+ビットコインとイーサリアムは既にノードの十分な分散性があり、51%攻撃がほぼ不可能な存在になっています。つまりその上に乗る資産は攻撃されるリスクが他のチェーンに比べて低いということです。しかしビットコインもイーサリアムも、現在ではそのガス代が高い、トランザクションに時間がかかる、という問題があり、一部のクリプトオタクが使っているのみで一般に普及することはそのままでは難しいでしょう。しかしその十分に分散した、またそれによって多くの資産が乗っているチェーンとシームレスに統合し、またそれによってビットコインとイーサリアムの資産をICP上で扱えるようになることで、ビットコインとイーサリアムをガス代が安く、トランザクションが早く、扱うことができるようになります。**Web2の速度でブロックチェーンを扱えるようになるのです**。
+今回はそれがどういう仕組みで実現されているのか、またそれによってどういう未来が作れるようになるのか、特にイーサリアムとの統合について焦点を当てて解説していきます。
+
+## イーサリアムを補完するICPエコシステム
+まず、Dfinityは現在のイーサリアムについて、どのような問題があると考えているのでしょうか？
+
+- イーサリアム上のDappのフロントエンドが中央集権組織であるAWSやCloudflareにホスティングされている
+  - それにより対検閲耐性がない
+- メタバースやGameFiと言われるものが中央集権組織であるAWSやGCPにホスティングされている
+  - 開発者がバックドアを仕込んだり、データベースにアクセスして恣意的にデータを変更できる
+- Dapp開発のガバナンスが分散化していない
+  - ユーザーの意思とは異なるアップデートが追加される恐れがある
+- オンチェーンでのデータ取得が中央集権的なオラクルに依存している
+- オンチェーン情報の取得が中央集権的なクラウド、または[Infura](https://www.infura.io/)のようなサービス提供者に依存している
+
+[参考: ETHCC@パリ 2023-07-23](https://www.youtube.com/watch?v=yITg81LqJ7A)
+[Internet Computer Wiki - The Internet Computer for Ethereum Developers](https://wiki.internetcomputer.org/wiki/The_Internet_Computer_for_Ethereum_Developers)
+
+ICPではHTMLとJavaScriptをホスティングすることができます。ETH上で一番大きなDappはUniswapで、これは主にはAWSにホスティングされていると言われていますが、バックアップとして既にICP上にもホスティングされ、配信されています。
+これによりAWSが何らかの政治的な意図を持ってUniswapを配信できなくしたとしても、UniswapはICPから配信され、永久に動き続けることになります。
+Uniswap interface on ICP: [https://hrsyx-fqaaa-aaaag-aavja-cai.ic0.app/#/swap](https://hrsyx-fqaaa-aaaag-aavja-cai.ic0.app/#/swap)
+
+またICPにはガバナンスの仕組みとして **サービスナーバスシステム(SNS)** と言われるものがあります。これはDAOの進化系であり、DappのガバナンスをSNSに移譲した後は、SNSでの投票を経ないとキャニスターの更新ができないようになります。これによりDappが **真の公共財** になることができます。
+[Internet Computer Wiki - Service Nervous System](https://wiki.internetcomputer.org/wiki/Service_Nervous_System_(SNS))
+[【SERVICE NERVOUS SYSTEM】インターネットコンピューター本命のローンチパッド](https://nryblog.work/service-nervous-system/)
+
+### ロードマップ
+
+> イーサリアム <> ICP
+> 真のワールドコンピュータは、中央集権的なブリッジが廃止され、スマートコントラクトがブロックチェーン間でシームレスに通信できるマルチチェーン環境を実現する。ICP はすでにビットコイン・ネットワークと統合しており、ネイティブ ETH 統合も進行中です。
+> https://internetcomputer.org/ethereum-integration
+
+Dfinityはイーサリアムとの統合について、2段階での計画を考えています。
+- フェーズ1
+  - [HTTPアウトコール](https://internetcomputer.org/https-outcalls)
+- フェーズ2
+
+## Chain Key Technology
+
+
+[Chain-Key Tokens](https://internetcomputer.org/how-it-works/chain-key-tokens/)
+
+[Titanium | Chain Key Cryptography Overview](https://www.youtube.com/watch?v=eh9Z7D3Uuco)
+
+[Inside the Internet Computer | Chain Key Cryptography](https://www.youtube.com/watch?v=vUcDRFC09J0)
+
+[Bridges to Nowhere- Why Bridges get Hacked and how the IC Will Solve the Bridging Dilemma](https://www.blog.bitfinity.network/bridges-to-nowhere-why-bridges-get-hacked-and-how-the-ic-will-solve-the-bridging-dilemma/)
+
+[What is Chain Key Technology and Chain Key TX?](https://www.blog.bitfinity.network/what-is-chain-key-technology-and-chain-key-tx/)
+
+
+
+## ckETHを実現する方法
+### かつてPsychedelicが取り組んでいたもの
+
+[Terabethia: Bridging Contracts & Assets Across Ethereum and the Internet Computer](https://medium.com/terabethia-bridge/terabethia-bridging-contracts-assets-across-ethereum-and-the-internet-computer-dc45797de1dd)
+
+### Dfinityの取り組み
+
+ckETH  
+https://github.com/dfinity/ic/tree/master/rs/ethereum/cketh
+
+https://twitter.com/Eikichi_WLI/status/1685285952875601920
+
+### IC Light Houseの取り組み
+
+https://twitter.com/icp_ns/status/1678411777434963969
+
+https://github.com/iclighthouse/icETH
+
+
+GoerliのETHtestトークンをIC上に持ってくることに成功した  
+https://medium.com/@ICLighthouse/iclighthouse-multi-chain-asset-hub-guide-29666c754f7f
+
+しきい値ECDSAを使ったオフチェーンブリッジなしの仕組み、ic Router  
+https://medium.com/@ICLighthouse/iclighthouse-two-week-updates-jun-12-jun-25-2323e9612674
+
+
+## Bitfinity
