--- a/articles/1b79a67341e477.md
+++ b/articles/1b79a67341e477.md
@@ -119,8 +119,10 @@ https://twitter.com/dominic_w/status/1574546360418070528
 
 
 ## ckETH & ckERC20
-### かつてPsychedelicが取り組んでいたもの
+### Psychedelicの取り組み
 Psychedelic とはICPのPlug Walletを最初に開発していた企業で、それ以外にもドメインサービスやNFTマーケットプレイスなどにも取り組んでいました。Psychedelic は現在ではFleekというサービスの開発に注力していて、Plug Walletは現在は[luke.icp](https://twitter.com/luke_icp)が [ICP 版クラウドファンディングのfunded](https://funded.app/)で調達をして開発を続けています。
+
+https://zenn.dev/gelgoog999/articles/dcd8aa0ab524f6
 
 さて、そのPsychedelicはかつて[DIP20](https://github.com/Psychedelic/DIP20)と[DIP721](https://github.com/Psychedelic/DIP721)というEthereumのトークン規格に対応したICP上のトークン規格を開発していました。
 そしてそのトークンを使うために、独自でブリッジの仕組みも開発していたのです。
