--- a/articles/1b79a67341e477.md
+++ b/articles/1b79a67341e477.md
@@ -2,7 +2,7 @@
 title: "ICPのEthereumインテグレーションの仕組みと未来"
 emoji: "♾"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["blockchain", "ethereum", "icp"]
+topics: ["blockchain", "ethereum", "icp", "internetcomputer"]
 published: false
 ---
 
