--- a/articles/1b79a67341e477.md
+++ b/articles/1b79a67341e477.md
@@ -111,9 +111,13 @@ https://twitter.com/dominic_w/status/1574546360418070528
 
 参考: [Let’s Grow the Internet Computer Network: Why and How, and General Updates](https://medium.com/dfinity/lets-grow-the-internet-computer-network-why-and-how-and-general-updates-1c8d0770a299)
 
+この仕組みでETH←→ICPのブリッジを作るとこのようになります。
+Solidityの側にスマートコントラクトは存在しません。あるのはICPのサブネットが持つ公開鍵に紐づくEOAのウォレットだけです。これがプールになります。
+ICPのキャニスターはETH側のウォレットを監視し、ETHが送られてきたら対応する量のckETHをmintし、送ります。
+そしてキャニスターにckETHが送られてくると、ckETHをバーンし、ETH側のウォレットから出金します。
+Solidityのスマートコントラクトのバグによるハッキングや、バックドアによりプールの残高がラグプルされるとか、そのような危険は起きなくなります。
 
-そしてのこの仕組みにより、ICP上のブリッジは完全にオンチェーン上でのコンセンサスを経た処理しか実行されないことになります。異なるチェーン間での残高の確認を経て、複数のノードが確認し署名しないとチェーン間をまたぐ資産の移動はできなくなります。
-これまでのブリッジのように、誰かが秘密鍵を知って勝手にブリッジ上の資産を引き出すことができるとか、いくらでもトークンをMintできると言った危険性はなくなります。
+![](/images/icp-eth-integration/cketh.png)
 
 参考: [Chain-Key Tokens](https://internetcomputer.org/how-it-works/chain-key-tokens/)
 
@@ -140,7 +144,7 @@ https://zenn.dev/gelgoog999/articles/dcd8aa0ab524f6
 DfinityのGithubリポジトリの中でckETHの開発されている様子を見ることができます。
 [https://github.com/dfinity/ic/tree/master/rs/ethereum/cketh](https://github.com/dfinity/ic/tree/master/rs/ethereum/cketh)
 
-2023年8月現在では、ここにはETHを受け取り、また引き出すために[minter.sol](https://github.com/dfinity/ic/blob/master/rs/ethereum/cketh/minter/minter.sol)というコントラクトがあり、ICP側ではRustでEthereumに対してトランザクション履歴を取得したり、トランザクションを作る処理、そのためのECDSA暗号のライブラリなどが含まれています。
+2023年8月現在では、ここにはETH側でckETHトークンをmintするための[minter.sol](https://github.com/dfinity/ic/blob/master/rs/ethereum/cketh/minter/minter.sol)というコントラクトがあり、ICP側ではRustでEthereumに対してトランザクション履歴を取得したり、トランザクションを作る処理、そのためのECDSA暗号のライブラリなどが含まれています。
 ICP側でckETHのトークンをmintする処理については見つけることはできませんでした。
 
 ### IC Light Houseの取り組み
