--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -21,16 +21,16 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 
 ---
 
-バージョン1.4では、いわゆるORCメモリ管理アルゴリズムが同梱されています。ORCは、既存のARCアルゴリズム（バージョン1.2で初搭載）にサイクルコレクタを追加したものです。名前の由来もそこからで、「O」はサイクルを、「RC」は「参照カウント」を表し、このアルゴリズムの基礎となっています。
+バージョン1.4には、いわゆるORCメモリ管理アルゴリズムが搭載されています。ORCは、既存のARCアルゴリズム（バージョン1.2で初めて導入）にサイクルコレクタを追加したものです。この名前の由来もここにあります。 "O"はサイクルを表し、"RC"はアルゴリズムの基盤である「参照カウント（Reference Counting）」を意味します。
 
-サイクルコレクタは、Linsらによるかなり有名な「trial deletion」アルゴリズムがベースになっています。このアルゴリズムがどのように機能するかはここでは説明しません。良い説明は論文を読んでください。
+サイクルコレクタは、Lins氏らによる比較的よく知られた「試行削除（trial deletion）」アルゴリズムに基づいています。このアルゴリズムがどのように機能するかはここでは説明しません。詳細については、論文を参照してください。
 
 > ※訳者注：
 > 原文にある論文へのURLはリンク切れになっていた。"Bacon01Concurrent"という論文なのだが、このアルゴリズムはPHPにも入っているようで、こちらのスライドでこのアルゴリズムについて見ることができる。
 > https://www.slideshare.net/y-uti/php-gc
 
 
-いつものように、私はこのアルゴリズムを改良し、より多くの最適化を加えたいという誘惑に抗えませんでした。Nimコンパイラは関係する型を分析し、潜在的に循環参照になっている場合のみ、サイクルコレクタを呼び出すコードを生成します。この型解析は、型に`asyclic` と注釈をつけることで助けられています。例えば、二分木は次のようにモデル化されます。
+いつものように、私はこのアルゴリズムを改善し、さらに最適化を追加する誘惑に逆らうことができませんでした。Nimコンパイラは関連する型を分析し、サイクルになる可能性がある場合にのみ、サイクルコレクタを呼び出すコードが生成されます。この型解析は、型を`acyclic`として注釈を付けることで助けることができます。例えば、バイナリツリーを次のようにモデリングすることができます。
 
 ```nim
 type
@@ -38,27 +38,28 @@ type
     kids: array[2, Node]
     data: string
 ```
-サイクルコレクタのオーバーヘッドは実際に測定可能です。ORCの性能をARCに近づけるためには、このアノテーションが欠かせません。
 
-ORCの設計の革新的な点は、周期的ルート候補を定数時間`O(1)`で登録・解除できることです。その結果、実行時にNimのデータがほとんど周期的でないという事実を利用することができます。
+残念ながら、サイクルコレクタのオーバーヘッドは実際に測定可能な場合があります。この注釈は、ORCの性能をARCに近づけるために重要です。
+
+ORCの設計における革新の一つは、サイクルルート候補を定数時間（O(1)）で登録および解除できることです。この結果、実行時にはNimのデータがめったにサイクルにならないという事実を利用することができます。
 
 ## ARC
-ARCはNimの純粋な参照カウントGCですが、多くの参照カウント操作が最適化されています。ムーブセマンティクスのおかげで、データ構造の構築には参照カウントの操作が不要です。またNimのARC実装のもう一つの特徴である「カーソル推論」のおかげで、一般的なデータ構造の[トラバーサル](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)も参照カウント操作に関係しないのです。ARCとORCの性能は、ヒープサイズに依存しません。
+ARCはNimの純粋な参照カウントGC（ガベージコレクタ）ですが、多くの参照カウント操作は最適化されて除去されています。ムーブセマンティクスのおかげで、データ構造の構築にはRC操作が関与しません。また、「カーソル推論」と呼ばれるNimのARC実装におけるもう一つの革新のおかげで、一般的なデータ構造の[トラバーサル](https://e-words.jp/w/%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)にもRC操作は関与しません！ARCとORCの性能は、ヒープのサイズに依存しません。
 
 ## ベンチマーク
-このアルゴリズムの違いを示す簡単なベンチマークを作成しました。このベンチマークは、ORCとNimの他のGCの違いを強調するために書かれたもので、現実的なワークロードをモデル化するものではないことに注意してください。
+これらの*アルゴリズム的*な違いを示すために、簡単なベンチマークを書きました。なお、このベンチマークはORCとNimの他のGCとの違いを強調するために書かれたものであり、現実的なワークロードをモデル化したものではありません。
 
 ```nim
 import asynchttpserver, asyncdispatch, strutils, json, tables, streams
 
-# 約135MBのデータ:
+# 約135MBのライブデータ：
 var sessions: Table[string, JsonNode]
 for i in 0 ..< 10:
   sessions[$i] = parseJson(newFileStream("1.json", fmRead), "1.json")
 
 var served = 0
 
-var server = newAsyncHttpServer() # 10行目
+var server = newAsyncHttpServer()
 proc cb(req: Request) {.async.} =
   inc served
   await req.respond(Http200, "Hello World")
@@ -66,39 +67,51 @@ proc cb(req: Request) {.async.} =
     when not defined(memForSpeed):
       GC_fullCollect()
 
-waitFor server.serve(Port(8080), cb) # 18行目
+waitFor server.serve(Port(8080), cb)
 ```
 
-10行目から18行目は、Nim標準ライブラリを使った"Hello World”を返す非同期HTTPサーバーの例です。
+10～18行目は、Nimの標準ライブラリからの「Hello World」非同期HTTPサーバーの例です。
 
-4～6行目では、約135MBのJSONデータをグローバル変数`sessions`にロードしています。ORCは、このメモリがロードされた後、プログラム実行の残りの間、それが生きているにもかかわらず、決してこのメモリに触れません。古いNimのGCは、このメモリに触れる必要があるのです。このベンチマークでは、マーク&スイープが最も良いパフォーマンスを示したので、ORCをNimの「マーク＆スイープ」GC（M&S）と比較しています。
+4～6行目では、約135MBのJSONデータをグローバルな`sessions`変数に読み込んでいます。ORCはこのメモリをロードした後、プログラムが終了するまでこのメモリに触れません。対照的に、古いNimのGCはこのメモリに触れる必要があります。私はM&S GC（マーク＆スイープ）と比較していますが、M&Sはこのベンチマークで最も良いパフォーマンスを発揮します。
 
-`GC_fullCollect`は、プログラムが理論上必要とする135MBのRAMに近いメモリ消費を維持するために、頻繁に呼び出されます。
+`GC_fullCollect`は、プログラムが理論上必要とする約135MBのRAMにメモリ消費を近づけるために頻繁に呼び出されます。
 
-`wrk` ベンチマークツールを使って、以下のような結果が得られました。
+「wrk」ベンチマークツールを使用して、次の数値を得ました：
 
-|Metric / algorithm|ORC|M&S|
-|---|---|---|
-|Latency (Avg)|320.49 us|65.31 ms|
-|Latency (Max)|6.24 ms|204.79 ms|
-|Requests/sec|30963.96|282.69|
-|Transfer/sec|1.48 MB|13.80 KB|
-|Max memory|137 MiB|153 MiB|
+| メトリック / アルゴリズム | ORC | M&S |
+|:---:|:---:|:---:|
+| レイテンシ（平均） | 320.49 us | 65.31 ms |
+| レイテンシ（最大） | 6.24 ms | 204.79 ms |
+| リクエスト/秒 | 30963.96 | 282.69 |
+| 転送/秒 | 1.48 MB | 13.80 KB |
+| 最大メモリ | 137 MiB | 153 MiB |
 
-M&Sはスループットでは勝っているが、レイテンシでは勝っていません。しかし、メモリ消費量は約330MBに増加し、プログラムが実際に必要とするメモリの2倍以上になってしまいました。
+そうです、ORCはM&S GCよりも**100倍以上**速いのです。理由は、ORCがミューテータが触れるメモリにしか触れないからです。これは、現代のマシンでのパフォーマンスを論理的に推論するための重要な機能です。世代別GCも同様の保証を提供できるかもしれません。実際、ORCは世代別かつインクリメンタルGCと見なすことができ、さらに、サイクルにならない構造はガベージになるとすぐに解放されるという保証があります。
 
-ORCはレイテンシとメモリ消費量において常に優位に立ち、デストラクタとうまく協調し、したがってカスタムメモリ管理もうまくいき、ヒープサイズに依存せず、スタックルートを正確に追跡し、C/C++エコシステムが提供するすべてのサニタイザでクリーンに動作します。
+では、積極的な`GC_fullCollect`の呼び出しが行われない場合はどうでしょうか？次の数値を得ました：
 
-これらの結果は、他のプログラムで見られる典型的なものです。遅延は減少し、ジッターはほとんどなく、メモリ消費量はプログラムが必要とする最小値に近いままです。組み込み開発には最適な結果です
+| メトリック / アルゴリズム | ORC | M&S（memForSpeed） |
+|:---:|:---:|:---:|
+| レイテンシ（平均） | 274.84 us | 1.49 ms |
+| レイテンシ（最大） | 1.10 ms | 46.41 ms |
+| リクエスト/秒 | 34948.95 | 39561.97 |
+| 転送/秒 | 1.67 MB | 1.89 MB |
+| 最大メモリ | 137 MiB | 333 MiB |
 
-GCの研究では見落とされていたアイデアがたくさんあることが分かりましたので、サイクル収集アルゴリズム自体もさらに進化させていく予定です。Nimにとってエキサイティングな時代です。
+M&Sはスループットで勝ちますが、レイテンシでは負けています。しかし、メモリ消費は約330MBにまで増加し、プログラムが実際に必要とするメモリの2倍以上になっています！
+
+ORCは常にレイテンシとメモリ消費で勝利し、デストラクタともうまく連携し、カスタムメモリ管理とも相性が良く、ヒープサイズに依存せず、スタックルートを正確に追跡し、C/C++エコシステムが提供するすべてのサニタイザときれいに連携します。
+
+これらの結果は他のプログラムでも典型的です：レイテンシは減少し、ジッターはほとんどなく、メモリ消費はプログラムが必要とする最小限に近いままです。組み込み開発にとって素晴らしい結果です！
+
+サイクルコレクションアルゴリズム自体のさらなる改良も進行中です。GC研究が見逃していたアイデアがたくさんあることがわかりました。Nimにとってエキサイティングな時代です！
 
 ## まとめ
-ORCを使ってコンパイルするには、コマンドラインで`--gc:orc` を使用します。
+ORCでコードをコンパイルするには、コマンドラインで`--gc:orc`を使用してください。
 
-- ORCは、[Valgrind](https://ja.wikipedia.org/wiki/Valgrind)や他のC++サニタイザーと連携して動作できます。(Valgrindを正確にチェックするために `--gc:orc -g -d:useMalloc` でコンパイルしてください。)
-- ORCはこれまでのGCに比べて約半分のメモリしか使いません。
-- メモリ消費量が重要な場合、ORCはスループットにおいて桁違いに速くなる可能性があります。メモリ消費量がそれほど重要でない場合は、スループットは同等です。
-- ORCは、CPU固有のトリックを使用せず、Webassemblyのような限定されたターゲットでもハックなしで動作します。
-- ORCはサブミリ秒のレイテンシを提供します。これは、（ハード）リアルタイム・システムに適しています。GCによる"Stop the World"は起きません。
-- ORCは、ヒープやスタックスペースの使用量を気にしません。
+- ORCは[Valgrind](https://ja.wikipedia.org/wiki/Valgrind)やその他のC++サニタイザとすぐに互換性があります。（正確なValgrindチェックのために`--gc:orc -g -d:useMalloc`でコンパイルしてください。）
+- ORCは古典的なGCの2倍少ないメモリを使用します。
+- ORCは、メモリ消費が重要な場合にスループットで桁違いに速くなります。メモリ消費が重要でない場合でもスループットは比較可能です。
+- ORCはCPU固有のトリックを使用せず、WebAssemblyのような制限されたターゲットでもハックなしで動作します。
+- ORCはミリ秒以下のレイテンシを提供します。（ハード）リアルタイムシステムに適しています。「全世界を停止」フェーズはありません。
+- ORCはヒープサイズや使用スタックスペースのサイズは気にしません。
