--- a/articles/af2b2b9f8fd890.md
+++ b/articles/af2b2b9f8fd890.md
@@ -315,7 +315,7 @@ proc makeTree(depth: int): Node =
 ```
 ここにベンチマークがあります。
 これはバイナリツリーベンチマークであり、ガーベッジコレクターのスループットのための標準的なベンチマークです。
-このすべてを理解することを期待しているわけではありませんが、ポイントは、ここで **「sink」や「lend」などのアノテーションが存在しない** にもかかわらず、これらが内部で機能しているということです。
+このすべてを理解することを期待しているわけではありませんが、ポイントは、ここで **「sink」や「lent」などのアノテーションが存在しない** にもかかわらず、これらが内部で機能しているということです。
 何兆ものバイナリツリーをある深さまで作成してみましょう。
 
 ## ARC(2)
