--- a/articles/42298ff36f7e4b.md
+++ b/articles/42298ff36f7e4b.md
@@ -2,7 +2,7 @@
 title: "Node.jsでのバックエンドアプリケーションで環境変数を管理するベストプラクティス"
 emoji: "🛡️"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["nodejs", "typescript", "環境変数"]
+topics: ["nodejs", "typescript"]
 published: false
 ---
 
