--- a/articles/42298ff36f7e4b.md
+++ b/articles/42298ff36f7e4b.md
@@ -1,5 +1,5 @@
 ---
-title: "Node.jsでのバックエンドアプリケーションで環境変数を管理するベストプラクティス"
+title: "Node.jsのバックエンドアプリケーションで環境変数を管理するベストプラクティス"
 emoji: "🛡️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["nodejs", "typescript"]
